package drawing;

public abstract class Circle extends Shape {

  double itsRadius;
  Point itsCenter;

  public abstract void draw();
}
