package drawing;

public class Point {

  double x;
  double y;

  Point(double x, double y) {
    this.x = x;
    this.y = y;
  }
}
