package drawing;

public abstract class Square extends Shape {

  double itsSide;
  Point itsTopLeft;

  public abstract void draw();
}
