@startuml

package drawing {}
abstract class drawing.standard.Shape {
  {abstract} void Draw()
}

abstract class drawing.standard.Circle {
  double itsRadious
  drawing.standard.Point itsCenter
  {abstract} void Draw()
}
abstract class drawing.standard.Square {
  double itsSide
	drawing.standard.Point itsTopLeft
  {abstract} void Draw()
}

class drawing.standard.Point {
  double x
  double y
}
class drawing.standard.BigCircle {
  void Draw()
}
class drawing.standard.BigSquare {
  void Draw()
}
class drawing.standard.DrawingTool {
  void DrawAllShapes(shapeList)
}

drawing.standard.DrawingTool -r- drawing.standard.Shape
drawing.standard.Shape --|> drawing.standard.Circle
drawing.standard.Shape --|> drawing.standard.Square
drawing.standard.Circle --* drawing.standard.Point
drawing.standard.Square --* drawing.standard.Point
drawing.standard.Circle --|> drawing.standard.BigCircle
drawing.standard.Square --|> drawing.standard.BigSquare


@enduml